Bug Fix for overlapping content in reorder and browse pages , when you resize the window(<970px) the content in the page is getting overlapping.(added min-width to container level)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@79541 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/grid.css
+++ b/projects/Media/docroot/assets/css/common/grid.css
@@ -36,10 +36,12 @@
 -------------------------------------------------------------- */
 
 /* A container should group all your columns. */
+/* fix for the overlapping content for window resize */
 .container {
   width: 970px;
   margin: 0 auto;
   max-width: 100%;
+  min-width:970px;
 }
 
 /* Use this class on any div.span / container to see the grid. */
